--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
             <div class="container-fluid mx-0 py-5 px-5 border-bottom border-dark" data-aos="fade-up">
               <div class="row"><p class="fs-1 fw-bold" id="contact"><u>Let's build something together!</u>😊</p></div>
-              <div class="row py-3"><a href="mailto:syedafinquiries@gmail.com" style="text-decoration: none;"><p class="fs-2 fw-bold">syedafinquiries@gmail.com</p></a></div>
+              <div class="row py-3"><a href="mailto:syedafinquiries@gmail.com" style="text-decoration: none; word-wrap: break-word;" class="fs-1 fw-bold">syedafinquiries@gmail.com</a></div>
               <div class="row">
                 <div class="col-4 d-flex align-items-center justify-content-between">
                   <a href="https://dribbble.com/Syed_AF" target="_blank" style="color: #212529;"><i class="fa-brands fa-dribbble display-5 pe-3"></i></a>
